Added simple tournament CRUD

--- a/Tournamental/Tournamental.csproj
+++ b/Tournamental/Tournamental.csproj
@@ -138,13 +138,22 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\TournamentController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Cryptography.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Extended\Tournament.cs" />
     <Compile Include="Models\Extended\User.cs" />
     <Compile Include="Models\City.cs" />
+    <Compile Include="Models\Participant.cs">
+      <DependentUpon>TournamentsModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ResetPasswordModel.cs" />
+    <Compile Include="Models\Tournament.cs">
+      <DependentUpon>TournamentsModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\TournamentsModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -227,6 +236,12 @@
     <Content Include="Views\User\VerifyAccount.cshtml" />
     <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\User\ForgotPassword.cshtml" />
+    <Content Include="Views\User\ResetPassword.cshtml" />
+    <Content Include="Views\Tournament\Create.cshtml" />
+    <Content Include="Views\Tournament\Delete.cshtml" />
+    <Content Include="Views\Tournament\Details.cshtml" />
+    <Content Include="Views\Tournament\Edit.cshtml" />
+    <Content Include="Views\Tournament\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
